--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "sass": "^1.89.2"
   },
   "devDependencies": {
